fix alignment for loading cells

--- a/app/assets/stylesheets/shared/items_table.scss
+++ b/app/assets/stylesheets/shared/items_table.scss
@@ -27,6 +27,7 @@
     td.loading {
       background: image-url('loading.gif') no-repeat left center;
       padding-left: 20px;
+      vertical-align: middle;
     }
 
     th {
